2000-07-11  Greg McGary  <greg@mcgary.org>

	* include/libc-symbols.h [!__ASSEMBLER__] (strong_alias):
	Add extra level of macro expansion.
	[!__ASSEMBLER__ && HAVE_WEAK_SYMBOLS] (weak_alias): nLikewise.
	* sysdeps/generic/bp-thunks.h: Ensure `struct timeval' definition
	is available at the time `select' prototype is declared.
	* sysdeps/unix/make-syscalls.sh: Remove unused variables.
	Collect non-versioned weak aliases.  Consider only non-versioned
	aliases for the user-visible systemcall name.  Do checks inline with
	call to primitive system call.
	* sysdeps/unix/sysv/linux/ptrace.c (ptrace): Add void cast to
	stand-alone bounds checks to suppress unused value warnings.
	* sysdeps/unix/sysv/linux/sysctl.c (__sysctl): Likewise.

2000-07-10  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/check_fds.c: New file.  Implements
	file descriptor checking in SUID programs for the Hurd.

	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyname2_r): Use
	res_hostalias instead of __hostalias for thread-safety.

2000-07-09  Mark Kettenis  <kettenis@gnu.org>

	* elf/rtld.c (dl_main): Move call to __libc_check_standard_fds...
	* sysdeps/generic/dl-sysdep.c (_dl_sysdep_start): ... to here.

2000-07-10  Ulrich Drepper  <drepper@redhat.com>

	* include/features.h: Include ISO C99 features if the compiler used
	is an ISO C99 compiler.
	Patch by Joseph S. Myers <jsm28@cam.ac.uk>.

2000-07-08  Mark Kettenis  <kettenis@gnu.org>

	* iconv/gconv_conf.c: Include <bits/libc-lock.h>.

2000-07-10  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/i386/sigaction.c: Make alias weak since
	it's overridden by libpthreads.
	* sysdeps/unix/sysv/linux/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/arm/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/ia64/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/sigaction.c: Likewise.

	* malloc/Makefile: Run tst-mtrace only with shared libs.
