@@ -1,3 +1,15 @@
+2000-07-12  Greg McGary  <greg@mcgary.org>
+
+	* sysdeps/generic/open64.c: Wrap extern symbols in BP_SYM ().
+	* sysdeps/posix/open64.c: Likewise.
+	* sysdeps/generic/fegetenv.c: Likewise.
+	* sysdeps/powerpc/fpu/fegetenv.c: Likewise.
+	* sysdeps/powerpc/fpu/fesetenv.c: Likewise.
+	* sysdeps/powerpc/fpu/feupdateenv.c: Likewise.
+	* sysdeps/powerpc/fpu/fgetexcptflg.c: Likewise.
+	* sysdeps/powerpc/fpu/fraiseexcpt.c: Likewise.
+	* sysdeps/powerpc/fpu/fsetexcptflg.c: Likewise.
+
 2000-07-11  Greg McGary  <greg@mcgary.org>
 
 	* include/libc-symbols.h [!__ASSEMBLER__] (strong_alias):
